--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,27 @@ article p.S_class
     font-size: 30px;
 
 }
+
+.box {
+    background-color: green;
+    width: 50px;
+    height: 50px;
+    margin: 10px 10px 10px 10px;
+    float: left;
+
+}
+
+.none 
+{
+    clear: left;
+}
+
+
+.box2 {
+    background-color: green;
+    width: 50px;
+    height: 50px;
+    margin: 10px 10px 10px 10px;
+    float: right;
+
+}
