--- a/css/styles.css
+++ b/css/styles.css
@@ -2,35 +2,32 @@
 .box1{
     background-color:chocolate;
     padding: 20px;
-    
-    
 }
 
 .box2{
     background-color: brown;
     width: 300px;
     height: 300px;
-
-        position: absolute;
-        top: 0px;
-        left: 0px;
-
+    position: relative;
+    top: 50px;
+    right: 40px;
 }
 
 .box3{
     background-color: rgba(207, 29, 29, 0.712);
-    width: 200px;
-    height: 200px;
-    position: relative;
+    padding: 20px;
+    position: sticky;
+    top: 200px;
+    bottom: 100px;
+
 }
 
 .box4{
     background-color: rgba(194, 197, 26, 0.767);
     width: 100px;
     height: 100px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
+
+    
 }
 
 
@@ -42,6 +39,6 @@
 
 .wrapper{
     width: 100%;
-    height: 700px;
+    height: 4000px;
     background-color: cyan;
 }
